<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="co.edu.udea.compumovil.gr04_20172.lab4.EditProfile">

<android.support.constraint.ConstraintLayout
    android:id="@+id/startingView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_show"
        android:layout_width="133dp"
        android:layout_height="99dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />


    <TextView
        android:id="@+id/textViewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elegirImagenRegister"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/img_show"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <Button
        android:id="@+id/btn_choose_image"
        android:textSize="13dp"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:text="@string/selectImage"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewImage"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/img_show"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.044"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:hint="@string/editLastnameRegister"
        android:textSize="18sp"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions|textCapSentences"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:gravity="center"
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:hint="@string/editNameRegister"
        android:textSize="19sp"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions|textCapSentences"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_image" />


    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="8dp"
        android:hint="@string/editAddressRegister"
        android:textSize="19sp"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions|textCapSentences"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="8dp"
        android:hint="@string/editCityRegister"
        android:textSize="19sp"
        android:imeOptions="actionDone"
        android:inputType="textAutoComplete"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/editPhoneRegister"
        android:gravity="center"
        android:textSize="19sp"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/selectDateRegister"
        android:textSize="20sp"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/editSaveRegister"
        android:textColor="@color/white"
        android:background="@color/SummerSky"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="262dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellido">

        <RadioButton
            android:id="@+id/radioButtonMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rbOnClick"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="8dp"
            android:text="@string/manRegister" />

        <RadioButton
            android:id="@+id/radioButtonWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="9dp"
            android:onClick="rbOnClick"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.54"
            android:text="@string/womanRegister" />


    </RadioGroup>

</android.support.constraint.ConstraintLayout >

</android.support.v4.widget.NestedScrollView>
